service-n-mesh/ingress-nginx/test/certmanager/nginx-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  namespace: cert-manager-self
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nginx.prox.hvl.io
    secretName: nginx-cert-tls
  rules:
  - host: nginx.prox.hvl.io
    http:
      paths:
      - path: /
        pathType: Prefix        
        backend:
          service:
            name: nginx
            port:
              number: 80
